--- a/css/style.css
+++ b/css/style.css
@@ -141,4 +141,142 @@ body {
   border-radius: 3px;
   text-align: center;
 }
+
+body {
+  background: #eaeaea;
+}
+
+* {
+  font-family: Lato;
+}
+
+.flex-row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+}
+
+.flex-column {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+}
+
+body {
+  background: #eaeaea;
+}
+
+* {
+  font-family: Lato;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  background-image: url("https://i.pinimg.com/originals/a0/44/5a/a0445a0e12f28a692e91139cc140812c.jpg");
+  background-size: cover;
+  border-radius: 5px;
+  border: 2px solid #333;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.keyboard__button {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  background: #333;
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
+
+.keyboard__button:hover {
+  background: #777;
+}
+
+.keyboard__button--reset {
+  background: darkred;
+}
+
+.keyboard__button--save {
+  background: darkgreen;
+}
+
+.keyboard__button--reset:hover {
+  background: red;
+}
+
+.keyboard__button--save:hover {
+  background: green;
+}
+
+.display {
+  border-radius: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-top: 2px solid #333;
+  color: #333;
+  display: inline-block;
+  margin-top: 5px;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  background: #22c1c3;
+  background: linear-gradient(0deg, #22c1c3 0%, #88e1f1 100%);
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+}
+
+body {
+  background: #eaeaea;
+}
+
+* {
+  font-family: Lato;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  margin: 10px 0;
+}
+
+.app {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.entry {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.entry__image {
+  width: 50px;
+  height: 50px;
+  border-radius: 2px;
+  margin-right: 5px;
+}
+
+.space {
+  margin: 500px;
+}
 /*# sourceMappingURL=style.css.map */
