--- a/sass/style.scss
+++ b/sass/style.scss
@@ -330,11 +330,11 @@ li.active{
 }
 
 .progress-bubble{
-  transition:1s;
+  transition: 1s;
 }
 
 .progress-bar{
-  width:0%;
+  width: 0%;
 }
 
 .progress-bar.colored-bar{
@@ -343,7 +343,7 @@ li.active{
 
 @keyframes progressBar {
   0% {
-    opacity:0.1;
+    opacity: 0.1;
     width: 0;
   }
   100% {
@@ -399,4 +399,71 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+body {
+  --color-indigo: #6574cd;
+  --color-lightest-gray: #fafcfc;
+  --color-dark-gray: #606f7b;
+}
+
+.article-active {
+  border-left: 2px solid var(--color-indigo);
+  border-bottom: 1px solid var(--color-dark-gray);
+  background-color: var(--color-lightest-gray);
+}
+
+.active-header {
+  color: var(--color-indigo);
+}
+
+.iconBG-active {
+  background-color: var(--color-indigo);
+  color: var(--color-lightest-gray);
+}
+
+.iconSVG-active {
+  stroke: var(--color-lightest-gray);
+  transform: rotate(180deg);
+}
+
+.article-content {
+  max-height: 0px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.25s, max-height 0.5s 0.25s;
+  overflow: hidden;
+}
+
+.article-content-active {
+  max-height: 100px;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.accordion-body header span {
+  position: relative;
+  transition: color 0.25s;
+}
+
+.accordion-body header span:hover {
+  color: var(--color-indigo);
+}
+
+.accordion-body header span::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  background-color: currentColor;
+  transition: transform 0.4s;
+  transform: scaleX(0);
+  transform-origin: 50%;
+  opacity: 0;
+}
+
+.accordion-body header span:hover::before {
+  transform: scaleX(1);
+  opacity: 1;
 }
